--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,3 +1,78 @@
 .hidden {
   display: none;
 }
+.float-right {
+  float: right;
+}
+
+#your-recipes-title {
+  text-align: center;
+}
+#inst-input {
+  height: 100px;
+}
+#edit-inst {
+  width: 300px;
+}
+
+.section {
+  overflow:hidden;
+  transition:max-height 0.3s ease-out;
+  height:auto;
+  max-height: 600px;
+}
+.section.collapsed {
+  max-height:0;
+}
+
+.container-fluid{
+  background: #e2e1e0;
+}
+
+.welcome-card {
+  background: white;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 900px;
+  margin: 1rem;
+  padding: 5rem;
+  margin-left:auto;
+  margin-right:auto;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.btn {
+  margin: 5px;
+}
+
+.card {
+    /* Add shadows to create the "card" effect */
+    background: white;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 800px;
+    margin: 1rem;
+    margin-left:auto;
+    margin-right:auto;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.card-container {
+    padding: 2em;
+}
+
+.footer {
+  text-align: center;
+  margin-bottom: 1em;
+}
+.body {
+  background-color: #e2e1e0;
+}
+
+/*  */
