--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,10 +1,28 @@
+
+
+.body {
+  background-color: gray;
+}
+
+/* Formatting Misc */
+.mt-3 {
+  margin-top: 3em;
+}
 .hidden {
   display: none;
 }
 .float-right {
   float: right;
 }
-
+.float-left {
+  float: left;
+}
+.block {
+  display: inline-block;
+}
+.clearfix {
+  overflow: hidden;
+}
 #your-recipes-title {
   text-align: center;
 }
@@ -15,18 +33,27 @@
   width: 300px;
 }
 
+/* this is where the real magic starts */
+.header {
+  overflow: hidden;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  background: #fff;
+  padding: 1em;
+  border-radius: 0px 0px 5px 5px;
+}
+
+.container-fluid{
+  background-color: #edf2da;
+}
+
 .section {
   overflow:hidden;
   transition:max-height 0.3s ease-out;
   height:auto;
-  max-height: 600px;
+  max-height: 2000px;
 }
 .section.collapsed {
   max-height:0;
-}
-
-.container-fluid{
-  background: #e2e1e0;
 }
 
 .welcome-card {
@@ -34,16 +61,25 @@
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 900px;
-  margin: 1rem;
   padding: 5rem;
   margin-left:auto;
   margin-right:auto;
+  margin-top: 5%;
+  margin-bottom: 5%;
   border-radius: 5px;
   text-align: center;
+  -webkit-animation: fadein 4s; /* Safari, Chrome and Opera > 14.1 */
+         -moz-animation: fadein 4s; /* Firefox < 16 */
+          -ms-animation: fadein 4s; /* Internet Explorer */
+           -o-animation: fadein 4s; /* Opera < 14.1 */
+              animation: fadein 4s;
 }
-
-.btn {
-  margin: 5px;
+.welcome-body {
+  -webkit-animation: fadein 4s; /* Safari, Chrome and Opera > 14.1 */
+     -moz-animation: fadein 4s; /* Firefox < 16 */
+      -ms-animation: fadein 4s; /* Internet Explorer */
+       -o-animation: fadein 4s; /* Opera < 14.1 */
+          animation: fadein 4s;
 }
 
 .card {
@@ -56,23 +92,53 @@
     margin-left:auto;
     margin-right:auto;
 }
-
 /* On mouse-over, add a deeper shadow */
 .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
-
 /* Add some padding inside the card container */
 .card-container {
     padding: 2em;
+}
+
+.btn {
+  margin: 5px;
+}
+.btn-welcome {
+  transition: 0.3s;
+}
+.btn-welcome:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 .footer {
   text-align: center;
   margin-bottom: 1em;
 }
-.body {
-  background-color: #e2e1e0;
-}
 
-/*  */
+
+/* Keyframes for Animation Magick */
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
