--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -22,8 +22,9 @@
 }
 .clearfix {
   overflow: hidden;
+  display: inline-block;
 }
-#your-recipes-title {
+#your-recipes-title, .instructionsCard {
   text-align: center;
 }
 #inst-input {
@@ -31,6 +32,9 @@
 }
 #edit-inst {
   width: 300px;
+}
+.h3.clearfix {
+  padding: 1em;
 }
 
 /* this is where the real magic starts */
@@ -68,18 +72,30 @@
   margin-bottom: 5%;
   border-radius: 5px;
   text-align: center;
-  -webkit-animation: fadein 4s; /* Safari, Chrome and Opera > 14.1 */
-         -moz-animation: fadein 4s; /* Firefox < 16 */
-          -ms-animation: fadein 4s; /* Internet Explorer */
-           -o-animation: fadein 4s; /* Opera < 14.1 */
-              animation: fadein 4s;
+  -webkit-animation: fade-in 4s; /* Safari, Chrome and Opera > 14.1 */
+         -moz-animation: fade-in 4s; /* Firefox < 16 */
+          -ms-animation: fade-in 4s; /* Internet Explorer */
+           -o-animation: fade-in 4s; /* Opera < 14.1 */
+              animation: fade-in 4s;
 }
 .welcome-body {
-  -webkit-animation: fadein 4s; /* Safari, Chrome and Opera > 14.1 */
-     -moz-animation: fadein 4s; /* Firefox < 16 */
-      -ms-animation: fadein 4s; /* Internet Explorer */
-       -o-animation: fadein 4s; /* Opera < 14.1 */
-          animation: fadein 4s;
+  -webkit-animation: fade-in 4s; /* Safari, Chrome and Opera > 14.1 */
+     -moz-animation: fade-in 4s; /* Firefox < 16 */
+      -ms-animation: fade-in 4s; /* Internet Explorer */
+       -o-animation: fade-in 4s; /* Opera < 14.1 */
+          animation: fade-in 4s;
+}
+
+.card-noCLick {
+    /* Add shadows to create the "card" effect */
+    background: white;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 800px;
+    margin: 1rem;
+    margin-left:auto;
+    margin-right:auto;
+    border-radius: 10px;
 }
 
 .card {
@@ -117,28 +133,54 @@
 }
 
 
-/* Keyframes for Animation Magick */
-@keyframes fadein {
+/* Keyframes for Fade In*/
+@keyframes fade-in {
     from { opacity: 0; }
     to   { opacity: 1; }
 }
 /* Firefox < 16 */
-@-moz-keyframes fadein {
+@-moz-keyframes fade-in {
     from { opacity: 0; }
     to   { opacity: 1; }
 }
 /* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
+@-webkit-keyframes fade-in {
     from { opacity: 0; }
     to   { opacity: 1; }
 }
 /* Internet Explorer */
-@-ms-keyframes fadein {
+@-ms-keyframes fade-in {
     from { opacity: 0; }
     to   { opacity: 1; }
 }
 /* Opera < 12.1 */
-@-o-keyframes fadein {
+@-o-keyframes fade-in {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Keyframes for Slide In*/
+@keyframes slide-in {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Firefox < 16 */
+@-moz-keyframes slide-in {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes slide-in {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Internet Explorer */
+@-ms-keyframes slide-in {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Opera < 12.1 */
+@-o-keyframes slide-in {
     from { opacity: 0; }
     to   { opacity: 1; }
 }
