--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,3 +1,5 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
-@import './main.css'
+@import './main.css';
+@import './format.css';
+@import './keyframes.css';
