--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,40 +1,29 @@
-
-
-.body {
-  background-color: gray;
-}
-
-/* Formatting Misc */
-.mt-3 {
-  margin-top: 3em;
-}
-.hidden {
-  display: none;
-}
-.float-right {
-  float: right;
-}
-.float-left {
-  float: left;
-}
-.block {
-  display: inline-block;
-}
-.clearfix {
-  overflow: hidden;
-  display: inline-block;
-}
+/* ID Targets */
 #your-recipes-title, .instructionsCard {
   text-align: center;
 }
+
 #inst-input {
   height: 100px;
 }
+
 #edit-inst {
   width: 300px;
 }
+
 .h3.clearfix {
-  padding: 1em;
+
+}
+
+#head {
+  position: fixed;
+  width: 1250px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#alert {
+  display: block;
 }
 
 /* this is where the real magic starts */
@@ -56,6 +45,7 @@
   height:auto;
   max-height: 2000px;
 }
+
 .section.collapsed {
   max-height:0;
 }
@@ -78,6 +68,7 @@
            -o-animation: fade-in 4s; /* Opera < 14.1 */
               animation: fade-in 4s;
 }
+
 .welcome-body {
   -webkit-animation: fade-in 4s; /* Safari, Chrome and Opera > 14.1 */
      -moz-animation: fade-in 4s; /* Firefox < 16 */
@@ -99,7 +90,6 @@
 }
 
 .card {
-    /* Add shadows to create the "card" effect */
     background: white;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
@@ -108,11 +98,11 @@
     margin-left:auto;
     margin-right:auto;
 }
-/* On mouse-over, add a deeper shadow */
+
 .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
-/* Add some padding inside the card container */
+
 .card-container {
     padding: 2em;
 }
@@ -120,9 +110,11 @@
 .btn {
   margin: 5px;
 }
+
 .btn-welcome {
   transition: 0.3s;
 }
+
 .btn-welcome:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
@@ -130,57 +122,4 @@
 .footer {
   text-align: center;
   margin-bottom: 1em;
-}
-
-
-/* Keyframes for Fade In*/
-@keyframes fade-in {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-/* Firefox < 16 */
-@-moz-keyframes fade-in {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fade-in {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-/* Internet Explorer */
-@-ms-keyframes fade-in {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-/* Opera < 12.1 */
-@-o-keyframes fade-in {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Keyframes for Slide In*/
-@keyframes slide-in {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-/* Firefox < 16 */
-@-moz-keyframes slide-in {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes slide-in {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-/* Internet Explorer */
-@-ms-keyframes slide-in {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-/* Opera < 12.1 */
-@-o-keyframes slide-in {
-    from { opacity: 0; }
-    to   { opacity: 1; }
 }
